# deltav

./: .dockerignore  .gitignore  .gitmodules  ARCHITECTURE.md  CLAUDE.md  Cargo.toml  Dockerfile  README.md  deny.toml  docker-compose.yml
.claude/: settings.json
.devcontainer/: Dockerfile  devcontainer.json
.devcontainer/scripts/: post-attach.sh  post-create.sh
.github/workflows/: ci.yml
deltav/: Cargo.toml
deltav/src/: cli.rs  github.rs  init.rs  main.rs  report.rs  schema.rs
deltav/src/github/: auth.rs  client.rs  types.rs
deltav/src/report/: data.rs  html.rs  markdown.rs  mod.rs
deltav/src/schema/: deliverables.rs  dependencies.rs  github.rs  project.rs  sizing.rs  team.rs
doc/design/: README.md  concept_of_execution.md  design_decisions.md
doc/interfaces/: README.md
doc/reports/: project_scope_and_architecture.md
doc/requirements/: README.md  states_and_modes.md
doc/verification/: README.md  ver_001_container_startup.md
src/cli/: mod.rs
src/github/: client.rs
src/report/: html.rs  markdown.rs
src/schema/: deliverables.rs  dependencies.rs  github.rs  mod.rs
