[package]
name = "deltav"
version = "0.1.0"
edition.workspace = true
description = "DevSecOps metrics aggregator for GitHub Enterprise"
authors.workspace = true
license.workspace = true

[dependencies]
# CLI
clap = { version = "4", features = ["derive"] }

# Serialization
serde = { version = "1", features = ["derive"] }
serde_json = "1"
toml = "0.8"

# Schema generation
schemars = { version = "0.8", features = ["chrono"] }

# Date/time handling
chrono = { version = "0.4.26", default-features = false, features = ["serde", "std", "clock"] }

# HTTP client for GitHub API - use older version without ICU deps
reqwest = { version = "0.11.22", default-features = false, features = ["json", "blocking", "rustls-tls"] }

# Error handling
anyhow = "1"
thiserror = "1"

# Regex for repo filtering
regex = "1"

# Base64 encoding for embedded images
base64 = "0.21"

[dev-dependencies]
tempfile = "3"
