[package]
name = "deltav"
version = "0.1.0"
edition.workspace = true
description = "DevSecOps metrics aggregator for GitHub Enterprise"
authors.workspace = true
license.workspace = true

[dependencies]
# CLI
clap = { version = "4", features = ["derive"] }

# Serialization
serde = { version = "1", features = ["derive"] }
serde_json = "1"
toml = "1"

# Schema generation
schemars = { version = "1", features = ["chrono04"] }

# Date/time handling
chrono = { version = "0.4", default-features = false, features = ["serde", "std", "clock"] }

# HTTP client for GitHub API
reqwest = { version = "0.13", default-features = false, features = ["json", "blocking", "rustls"] }

# Error handling
anyhow = "1"
thiserror = "2"

# Regex for repo filtering
regex = "1"

# Base64 encoding for embedded images
base64 = "0.22"

# Web server
axum = { version = "0.8", default-features = false, features = ["http1", "tokio"] }
tokio = { version = "1", features = ["rt-multi-thread", "net", "signal", "macros"] }

[dev-dependencies]
tempfile = "3"
